[package]
# SoundCloud Downloader
name = "sclouddl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
reqwest = { version = "0.11.23", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
